Remove redundant code from code-behind of main window

--- a/WpfSquardleSolver/View/MainWindow.xaml
+++ b/WpfSquardleSolver/View/MainWindow.xaml
@@ -37,7 +37,7 @@
             VirtualizingPanel.IsVirtualizing="True"/>
         <Button x:Name="ToggleSolverButton"
                 Content="Start Solving Puzzle"
-                Click="Button_Click"
+                Command="{Binding }"
                 Background="#2ecc71"
                 HorizontalAlignment="Left"
                 Margin="128,184,0,0"
