--- a/WpfSquardleSolver/View/CharacterGrid.xaml
+++ b/WpfSquardleSolver/View/CharacterGrid.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="450" 
-             d:DesignWidth="800">
+             d:DesignWidth="450">
     <UserControl.Resources>
         <Style TargetType="{x:Type TextBlock}">
         </Style>
@@ -16,6 +16,6 @@
         BorderThickness="2"
         BorderBrush="#FF521711"
         ClipToBounds="True">
-        <Grid x:Name="grid"/>
+        <Grid x:Name="grid" Width="{Binding ElementName=grid, Path=ActualHeight}"/>
     </Border>
 </UserControl>
