replace items control and scroll viewer with listview to allow items to be selected again

--- a/WpfSquardleSolver/View/CharacterGrid.xaml
+++ b/WpfSquardleSolver/View/CharacterGrid.xaml
@@ -14,8 +14,7 @@
         x:Name="border"
         Background="#e74c3c"
         BorderThickness="2"
-        BorderBrush="#FF521711"
-        ClipToBounds="True">
+        BorderBrush="#FF521711">
         <Grid x:Name="grid" Width="{Binding ElementName=grid, Path=ActualHeight}"/>
     </Border>
 </UserControl>
