--- a/WpfSquardleSolver/View/MainWindow.xaml
+++ b/WpfSquardleSolver/View/MainWindow.xaml
@@ -40,7 +40,7 @@
         </TextBox>
 
         <Border
-            Margin="380,36,40,39"
+            Margin="370,36,40,39"
             BorderThickness="3"
             BorderBrush="Black"
             CornerRadius="5">
@@ -48,20 +48,21 @@
                 x:Name="ResultsListView"
                 d:ItemsSource="{d:SampleData ItemCount=5}"
                 ItemsSource="{Binding CharacterGridViewModels}"
-                VirtualizingPanel.IsVirtualizing="True"
-                ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                ScrollViewer.VerticalScrollBarVisibility="Visible">
+                HorizontalAlignment="Stretch"
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                ScrollViewer.HorizontalScrollBarVisibility="Hidden">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel
                             Orientation="Horizontal"
-                            Width="{Binding ElementName=ResultsListView, Path=ActualWidth}"/>
+                            Width="{Binding ElementName=ResultsListView, Path=DataContext.WrapPanelWidth}"
+                            VirtualizingPanel.IsVirtualizing="True"/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
 
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Grid Width="100">
+                        <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
                                 <RowDefinition/>
@@ -69,15 +70,14 @@
 
                             <view:CharacterGrid
                                     Grid.Row="0"
-                                    d:Height="50"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"/>
+                                    Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}"
+                                    Height="80"
+                                    HorizontalAlignment="Center"/>
                             <TextBlock
                                 Text="{Binding AnswerAsString}"
                                 d:Text="Answer"
                                 Grid.Row="1"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
+                                HorizontalAlignment="Center"/>
                         </Grid>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
