--- a/WpfSquardleSolver/View/CharacterGrid.xaml
+++ b/WpfSquardleSolver/View/CharacterGrid.xaml
@@ -2,13 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:valueconverters="clr-namespace:WpfSquaredleSolver.ValueConverters"
              mc:Ignorable="d" 
              d:DesignHeight="100" 
              d:DesignWidth="100">
     <UserControl.Resources>
-        <Style TargetType="{x:Type TextBlock}">
-        </Style>
+        <valueconverters:IsCharacterTileInAnswerConverter x:Key="IsCharacterTileInAnswerConverter"/>
     </UserControl.Resources>
     <Border
         x:Name="border"
@@ -16,6 +16,19 @@
         BorderThickness="0"
         CornerRadius="10">
         <Grid x:Name="grid">
+            <Grid.Resources>
+                <Style TargetType="TextBlock">
+                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                    <Setter Property="VerticalAlignment" Value="Center"/>
+                </Style>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5"/>
+                    <Setter Property="BorderBrush" Value="#8d8d8d"/>
+                    <Setter Property="BorderThickness" Value="1"/>
+                    <Setter Property="Background" Value="#e0e0e0"/>
+                    <Setter Property="Padding" Value="1"/>
+                </Style>
+            </Grid.Resources>
             <Image Panel.ZIndex="1"
                    x:Name="HighlightedPathImage"
                    Stretch="UniformToFill">
@@ -25,7 +38,7 @@
                             <DrawingGroup Opacity="0.5">
                                 <GeometryDrawing x:Name="LineSegmentDrawing">
                                     <GeometryDrawing.Pen>
-                                        <Pen Thickness="8" Brush="Red"/>
+                                        <Pen Thickness="8" Brush="Red" EndLineCap="Round"/>
                                     </GeometryDrawing.Pen>
                                     <d:GeometryDrawing.Geometry>
                                         <PathGeometry>
@@ -52,6 +65,9 @@
                     </DrawingImage>
                 </Image.Source>
             </Image>
+            <d:Border Width="20" Height="20">
+                <d:TextBlock Text="A"/>
+            </d:Border>
         </Grid>
     </Border>
 </UserControl>
